syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

import "Protos/shared_definitions.proto";
import "Protos/common.proto";

option csharp_namespace = "Shared.Proto.Location";

service LocationGrpc {
  rpc GetAllLocations (common.GenericGetManyRequest) returns (GetAllLocationsResponse);
  rpc GetLocation (common.GenericGetRequest) returns (LocationExtendedDto);

  rpc CreateLocation (CreateLocationRequest) returns (LocationDto);
  rpc UpdateLocation (UpdateLocationRequest) returns (LocationDto);
  rpc DeleteLocation (common.GenericDeleteRequest) returns (google.protobuf.Empty);
}

message GetAllLocationsResponse {
  repeated LocationExtendedDto Locations = 1;
  common.PaginationMetaData MetaData = 2;
}

message CreateLocationRequest {
  string Name = 1;
  string UserId = 2;

  // Properties
  google.protobuf.StringValue DisplayName = 3;
  google.protobuf.FloatValue Latitude = 4;
  google.protobuf.FloatValue Longitude = 5;
}

message UpdateLocationRequest {
  int32 Id = 1;

  // Properties
  google.protobuf.StringValue DisplayName = 2;
  google.protobuf.FloatValue Latitude = 3;
  google.protobuf.FloatValue Longitude = 4;

  // allow only owner of the location to update it
  string UserId = 8;
}

